force-app/main/default/objects/Actual_Level_of_Effort__c/Actual_Level_of_Effort__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - An object that represents the actual level of effort for each requirement.</description>
    <label>Actual Level of Effort</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Level of Effort</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>