force-app/main/default/objects/Actual_Level_of_Effort__c/fields/Adapt_Ongoing_Support__c.field-meta.xml
<CustomField>
    <fullName>Adapt_Ongoing_Support__c</fullName>
    <description>Actual level of effort recorded for the Adapt &amp; Ongoing Support phase in a week for a User.</description>
    <inlineHelpText>Actual level of effort recorded for the Adapt &amp; Ongoing Support phase in a week for a User.</inlineHelpText>
    <label>Adapt &amp; Ongoing Support</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>