force-app/main/default/objects/Actual_Level_of_Effort__c/fields/Deploy__c.field-meta.xml
<CustomField>
    <fullName>Deploy__c</fullName>
    <description>Actual level of effor recorded for the Deploy phase in a week for a User.</description>
    <inlineHelpText>Actual level of effor recorded for the Deploy phase in a week for a User.</inlineHelpText>
    <label>Deploy</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>