force-app/main/default/objects/Actual_Level_of_Effort__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <description>The actual level of effort recorded for the Design phase in a week for a User.</description>
    <inlineHelpText>The actual level of effort recorded for the Design phase in a week for a User.</inlineHelpText>
    <label>Design</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>