force-app/main/default/objects/Actual_Level_of_Effort__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the user that is capturing the actual level of effort for the requirement.</description>
    <inlineHelpText>Name of the user that is capturing the actual level of effort for the requirement.</inlineHelpText>
    <label>Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Actual_Levels_of_Effort</relationshipName>
    <type>Lookup</type>
</CustomField>