force-app/main/default/objects/Actual_Level_of_Effort__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <description>Relate the actual level of effort to a requirement.</description>
    <label>Requirement</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Actual Level of Effort by Week</relationshipLabel>
    <relationshipName>Actual_Levels_of_Effort</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>