force-app/main/default/objects/Actual_Level_of_Effort__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Reflects the role of the user that is entering the actual level of effort</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Architect</fullName>
            </value>
            <value>
                <fullName>Configuration Resource</fullName>
            </value>
            <value>
                <fullName>Data Architect</fullName>
            </value>
            <value>
                <fullName>Data Migration Resource</fullName>
            </value>
            <value>
                <fullName>Development Resource</fullName>
            </value>
            <value>
                <fullName>Integration Resource</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
            <value>
                <fullName>System Admin</fullName>
            </value>
            <value>
                <fullName>Technical Architect</fullName>
            </value>
            <value>
                <fullName>Testing Resource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>