force-app/main/default/objects/Actual_Level_of_Effort__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <description>Actual level of effort recorded for the Test phase in a week for a User.</description>
    <inlineHelpText>Actual level of effort recorded for the Test phase in a week for a User.</inlineHelpText>
    <label>Test</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>