force-app/main/default/objects/Actual_Level_of_Effort__c/fields/Total_Actual_Level_of_Effort__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Level_of_Effort__c</fullName>
    <description>Total Actual level of effort in a week for a User</description>
    <formula>Plan__c + Design__c + Build__c + Test__c + UAT__c + Deploy__c + Adapt_Ongoing_Support__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Level of Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>