force-app/main/default/objects/Actual_Level_of_Effort__c/fields/UAT__c.field-meta.xml
<CustomField>
    <fullName>UAT__c</fullName>
    <description>Actual level of effort recorded for the UAT phase in a week for a User.</description>
    <inlineHelpText>Actual level of effort recorded for the UAT phase in a week for a User.</inlineHelpText>
    <label>UAT</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>