force-app/main/default/objects/Actual_Level_of_Effort__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <description>Required Date Field for Actual level of effort, taking week in which efforts need to be calculated.</description>
    <label>Week</label>
    <required>true</required>
    <type>Date</type>
</CustomField>